# ansem-ore

./: .gitignore  .railwayignore  Anchor.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml  tsconfig.json
.claude/: launch.json
.superpowers/sdd/: task-3-er-fix-report.md
app/: .env.local.example  .env.production.example  .gitignore  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
app/public/: beef.json
app/scripts/: optimize-bulls.mjs
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: ActivityFeed.tsx  BeefChip.test.tsx  BeefChip.tsx  Board.test.tsx  Board.tsx  BullLogo.tsx  ClaimCountdown.test.tsx  ClaimCountdown.tsx  ClaimPanel.test.tsx  ClaimPanel.tsx  Countdown.tsx  Disclaimer.test.tsx  Disclaimer.tsx  EscrowPanel.test.tsx  EscrowPanel.tsx  Hud.test.tsx  Hud.tsx  JackpotMeter.test.tsx  JackpotMeter.tsx  Leaderboard.tsx  ListingBanner.test.tsx  ListingBanner.tsx  Panels.test.tsx  PhaseNav.test.tsx  PhaseNav.tsx  PlayBoard.test.tsx  PlayBoard.tsx  PlayControls.test.tsx  PlayControls.tsx  Providers.tsx  SoundToggle.test.tsx  SoundToggle.tsx  Stage.tsx  StakeRail.test.tsx  StakeRail.tsx  VerifyPanel.test.tsx  VerifyPanel.tsx  WalletBar.tsx  WinTicker.test.tsx  WinTicker.tsx
app/src/hooks/: use-beef-config.test.tsx  use-beef-config.ts  use-keeper-snapshot.test.tsx  use-keeper-snapshot.ts  use-player-state.test.tsx  use-player-state.ts  use-reveal.test.tsx  use-reveal.ts  use-session.ts
app/src/lib/: amount.test.ts  amount.ts  anchor.test.ts  anchor.ts  beef.test.ts  beef.ts  board-layout.test.ts  board-layout.ts  claim-gate.test.ts  claim-gate.ts  explorer.test.ts  explorer.ts  format.test.ts  format.ts  keeper-client.test.ts  keeper-client.ts  session-store.test.ts  session-store.ts  sound.test.ts  sound.ts  writes.test.ts  writes.ts
app/test/: optimize-bulls.test.ts
docs/: devnet-runbook.md  mainnet-launch.md
docs/design/: bull-board.html
docs/launch/: announcement-draft.md
docs/superpowers/plans/: 2026-07-06-ansem-miner-m1-program-core.md  2026-07-06-ansem-miner-m2a-er-foundation.md  2026-07-06-ansem-miner-m2b-vrf.md  2026-07-06-ansem-miner-m2c-session-keys.md  (+15 more)
keeper/: Dockerfile  Dockerfile.dockerignore  README.md  package.json  tsconfig.json  vitest.config.ts
keeper/src/: beef.ts  buyback.ts  chain.ts  env.ts  floor.ts  index.ts  janitor.ts  jupiter.ts  logger.ts  main.ts  participants.ts  service.ts
keeper/test/: actions.test.ts  beef.test.ts  buyback.test.ts  decide.test.ts  devnet-round.it.ts  entry-batch.it.ts  env.test.ts  events.test.ts  floor.test.ts  jackpot.test.ts  janitor.test.ts  jupiter.test.ts  logger.test.ts  participants.test.ts  server.test.ts  service.test.ts  smoke.test.ts  snapshot.test.ts
programs/ansem-miner/: Cargo.toml
programs/ansem-miner/src/: constants.rs  error.rs  lib.rs  math.rs
programs/ansem-miner/src/instructions/: admin.rs  beef.rs  claim.rs  delegation.rs  direct.rs  escrow.rs  initialize.rs  janitor.rs  miner.rs  mod.rs  recovery.rs  round.rs  round_entry.rs  settle.rs  stake.rs  swap.rs  sweep.rs  vrf_settle.rs
programs/ansem-miner/src/state/: beef.rs  config.rs  escrow.rs  jackpot.rs  miner.rs  mod.rs  round.rs
programs/ansem-miner/tests/: invariants.rs
scripts/: _beef-launch.mjs  _config.mjs  _cursor.mjs  _e2e-bet.mjs  _e2e-direct.mjs  _mainnet-init.mjs  _safe-rpc-label.mjs  _safe-rpc-label.test.mjs  _sandbox.sh  _seed-beef-roll.mjs  _seed-beef-roll.test.mjs  beef-init.mjs  beef-mint-create.mjs  deploy-devnet.sh  devnet-env.sh  meteora-list.mjs  seed-jackpot-roll.mjs  test-er.sh
tests/: ansem-miner-devnet.ts  ansem-miner-er.ts  ansem-miner-session.ts  ansem-miner-vrf.ts  ansem-miner.ts  beef-cap.ts  cross-rail-double-claim.ts  direct-beef.ts  direct-stake.ts  jackpot-trigger.ts  join-round-stamp.ts  mainnet-path.ts
(+18 files in other folders)
