[package]
name = "ansem-miner"
version = "0.1.0"
description = "ANSEM Miner grid game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ansem_miner"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "=1.0.2", features = ["init-if-needed"] }
anchor-spl = "=1.0.2"
# anchor-lang 1.0 no longer re-exports solana_program::keccak; pull it directly.
# "sha3" enables the host implementation used by the Rust unit tests (on BPF the
# keccak syscall is used and this feature is a no-op).
solana-keccak-hasher = { version = "3", features = ["sha3"] }

# MagicBlock Ephemeral Rollups: delegation + commit/undelegate + #[ephemeral].
# Pinned to the INSTALLED tooling (ephemeral-validator/vrf-oracle 0.12.0/0.3.0
# era), NOT crates.io-latest — see the M2 foundation CORRECTION block. No "vrf"
# feature in M2a; VRF is M2b (standalone ephemeral-vrf-sdk 0.3.0).
ephemeral-rollups-sdk = { version = "=0.14.3", features = ["anchor"] }

# M2b: Ephemeral VRF. Standalone crate PINNED to =0.3.0 to match the installed
# vrf-oracle 0.3.0 — the 0.4.1 scoped-identity path would hang in VrfPending against
# a 0.3.0 oracle. Non-scoped create_request_randomness_ix + global VRF_PROGRAM_IDENTITY.
ephemeral-vrf-sdk = { version = "=0.3.0", features = ["anchor"] }

# M2c: Gum session keys. Gates the ER `stake` so a browser signs a burst of stakes
# with an ephemeral key (no wallet popup per tile). "no-entrypoint" gates the macro
# re-export (Session / SessionTokenV2 / session_auth_or). anchor-lang ">=0.28,<2.0"
# → our 1.0.2 satisfies; NOT yanked → normal resolve (no lock-seeding). The gum
# program KeyspM2ss… is bundled by mb-test-validator at genesis (verified).
session-keys = { version = "=3.1.1", features = ["no-entrypoint"] }
